<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/player_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_vs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:padding="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_player"
                android:src="@drawable/pngwing"
                android:layout_width="120dp"
                android:layout_height="120dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_player"
                android:text="@string/player_name"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textSize="@dimen/_28sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/enemy_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_section" />

    <androidx.cardview.widget.CardView
        android:id="@+id/enemy_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_play_game"
        app:layout_constraintTop_toBottomOf="@id/tv_vs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:padding="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_enemy"
                android:src="@drawable/pngwing"
                android:layout_width="120dp"
                android:layout_height="120dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_enemy"
                android:text="@string/enemy_name"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_play_game"
        android:text="@string/play_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enemy_section"
        app:layout_constraintBottom_toTopOf="@id/btn_leaderboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/leaderboard"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>